--- a/frontend/assets/sass/main.scss
+++ b/frontend/assets/sass/main.scss
@@ -8,6 +8,11 @@
 @import "components/form";
 
 @import "layout/registration";
+@import "layout/header";
+@import "layout/footer";
+@import "layout/footer-sign";
 
 @import "pages/home";
 @import "pages/signup";
+@import "pages/profile";
+@import "pages/verify";
