--- a/frontend/assets/sass/pages/_signup.scss
+++ b/frontend/assets/sass/pages/_signup.scss
@@ -2,7 +2,8 @@
     padding: 6rem 0;
     background-color: var(--color-primary);
     display: grid;
-    justify-content: center;
-    grid-template-columns: 60vw;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    
 }
 
